--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WebSub client for skohub",
   "main": "index.js",
   "scripts": {
-    "test": "eslint index.js",
+    "test": "jest",
     "lint:js": "eslint src --ext .jsx,.js --quiet",
     "build": "webpack"
   },
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "jest": "^24.5.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   }
