--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
