--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "lint:js": "eslint src --ext .jsx,.js --quiet",
     "build": "webpack --mode production",
-    "dev": "webpack --mode development"
+    "dev": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,8 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
