--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@emotion/core": "^10.0.9",
     "babel-loader": "^8.0.5",
     "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
