Install emotion-normalize

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "emotion-normalize": "^10.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
