--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "WebSub client for skohub",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --verbose",
+    "test:watch": "jest --watchAll --verbose",
+    "test:coverage": "jest --verbose --coverage",
     "lint:js": "eslint src --ext .jsx,.js --quiet",
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --mode development"
@@ -27,6 +30,8 @@
     "@babel/register": "^7.0.0",
     "@emotion/core": "^10.0.9",
     "babel-loader": "^8.0.5",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
