--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
+    "jest-websocket-mock": "^1.1.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
