--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@emotion/core": "^10.0.9",
-    "@storybook/addon-actions": "^5.0.3",
-    "@storybook/addon-knobs": "^5.0.3",
-    "@storybook/addon-notes": "^5.0.3",
-    "@storybook/addon-storysource": "^5.0.3",
-    "@storybook/react": "^5.0.3",
+    "@emotion/core": "^10.0.10",
+    "@storybook/addon-actions": "^5.0.5",
+    "@storybook/addon-knobs": "^5.0.5",
+    "@storybook/addon-notes": "^5.0.5",
+    "@storybook/addon-storysource": "^5.0.5",
+    "@storybook/react": "^5.0.5",
     "babel-loader": "^8.0.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
@@ -50,6 +50,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
     "jest-websocket-mock": "^1.1.1",
+    "mock-socket": "^8.0.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
@@ -57,8 +58,8 @@
   },
   "dependencies": {
     "emotion-normalize": "^10.0.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-feather": "^1.1.6"
   }
 }
